--- a/contact/contact.html
+++ b/contact/contact.html
@@ -70,12 +70,41 @@
         </nav>
 
         <div class="about " style="margin-top: 30px;">
-  <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;120 Neungdong-ro, Gwangjin-gu, Seoul 05029, Korea</p>
-  <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;82-2-454-5630</p>
-  <p><i class="material-icons" style="font-size: 13px;">email</i>&nbsp;&nbsp;&nbsp;trineurotec@trineurotec.com</p>
-</div>
+          <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;120 Neungdong-ro, Gwangjin-gu, Seoul 05029, Korea</p>
+          <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;82-2-454-5630</p>
+          <p><i class="material-icons" style="font-size: 13px;">email</i>&nbsp;&nbsp;&nbsp;trineurotec@trineurotec.com</p>
+          <div id="map" style="width:100%;height:400px;margin-top:70px;"></div>
+        </div>
 
-<footer class="footer ">
+<script>
+function myMap() {
+
+  var myLatlng = new google.maps.LatLng(37.541443, 127.072230);
+  var mapProp= {
+  // How zoomed in you want the map to start at (always required)
+  zoom: 16,
+
+  center: myLatlng,
+
+  // How you would like to style the map.
+  scrollwheel: false,
+  styles: [{"featureType":"administrative.land_parcel","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"landscape.man_made","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"labels","stylers":[{"visibility":"simplified"},{"lightness":20}]},{"featureType":"road.highway","elementType":"geometry","stylers":[{"hue":"#f49935"}]},{"featureType":"road.highway","elementType":"labels","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"geometry","stylers":[{"hue":"#fad959"}]},{"featureType":"road.arterial","elementType":"labels","stylers":[{"visibility":"off"}]},{"featureType":"road.local","elementType":"geometry","stylers":[{"visibility":"simplified"}]},{"featureType":"road.local","elementType":"labels","stylers":[{"visibility":"simplified"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"hue":"#a1cdfc"},{"saturation":30},{"lightness":49}]}]
+
+  };
+  var map=new google.maps.Map(document.getElementById("map"),mapProp);
+
+  var marker = new google.maps.Marker({
+      position: myLatlng,
+  });
+
+  // To add the marker to the map, call setMap();
+  marker.setMap(map);
+  }
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBB-MMbIRSZKMsCnMIEqzf_xaZj6TVO1-I&callback=myMap"></script>
+
+        <footer class="footer ">
   <p>
     Trineuro.
   </p>
