--- a/contact/map.html
+++ b/contact/map.html
@@ -70,7 +70,10 @@
         </nav>
 
         <div class="about " style="margin-top: 30px;">
-            <div id="map" style="width:100%;height:400px;margin-top:70px;"></div>
+          <p><i class="material-icons" style="font-size: 15px;">home</i>&nbsp;&nbsp;120 Neungdong-ro, Gwangjin-gu, Seoul 05029, Korea</p>
+          <p><i class="material-icons" style="font-size: 15px;">phone</i>&nbsp;&nbsp;82-2-454-5630</p>
+          <p><i class="material-icons" style="font-size: 13px;">email</i>&nbsp;&nbsp;&nbsp;trineurotec@trineurotec.com</p>
+          <div id="map" style="width:100%;height:400px;margin-top:70px;"></div>
         </div>
 
 <script>
